--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Public/Tan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Public/Tan.cshtml
@@ -195,20 +195,21 @@
         </div>
 
         <!--弹窗 选择号码 33个号码-->
-        <div id="popup_num33" class="C8_TCpopupA" style="margin-top:-171px; display:none;">
-            <div class="C8_Ttitle">
-                <h3>请选择选号</h3>
-            </div>
-            <div class="C8_Tcontent">
-                <dl class="C8_TcDl">
-                    <dt>
+    <div id="popup_num33" class="C8_TCpopupA" style="margin-top:-171px; display:none;">
+        
+        <div class="C8_Ttitle">
+            <h3>请选择选号</h3>
+        </div>
+        <div class="C8_Tcontent">
+            <dl class="C8_TcDl">
+                <dt>
                     <p>选号</p>
                     <span></span>
                     <div style="clear:both;"></div>
                 </dt>
-                    <dd>
+                <dd>
 
-                        <span class="numContainer">
+                    <span class="numContainer">
                         <span class="C8_Qiu">01</span>
                         <span class="C8_Qiu">02</span>
                         <span class="C8_Qiu">03</span>
@@ -242,27 +243,27 @@
                         <span class="C8_Qiu">31</span>
                         <span class="C8_Qiu">32</span>
                         <span class="C8_Qiu">33</span>
-                        </span>
-                        <div style="clear:both;"></div>
-                    </dd>
-                </dl>
-            </div>
-            <ul class="C8_Tbtn">
-                <li class="cancelButton">
-                    <a href="javascript:;">
-                        <img src="/images/69_1.png">
-                        <span>取消</span>
-                    </a>
-                </li>
-                <li class="confirmButton">
-                    <a href="javascript:;">
-                        <img src="/images/69_2.png">
-                        <span>确认</span>
-                    </a>
-                </li>
-                <div style="clear:both;"></div>
-            </ul>
+                    </span>
+                    <div style="clear:both;"></div>
+                </dd>
+            </dl>
         </div>
+        <ul class="C8_Tbtn">
+            <li class="cancelButton">
+                <a href="javascript:;">
+                    <img src="/images/69_1.png">
+                    <span>取消</span>
+                </a>
+            </li>
+            <li class="confirmButton">
+                <a href="javascript:;">
+                    <img src="/images/69_2.png">
+                    <span>确认</span>
+                </a>
+            </li>
+            <div style="clear:both;"></div>
+        </ul>
+    </div>
 
         <!--弹窗 选择号码 16个号码-->
         <div id="popup_num16" class="C8_TCpopupA" style="margin-top:-114px; display:none;">
@@ -877,7 +878,7 @@
                 </dl>
                 <dl class="C8_TcDl">
                     <dt>
-                    <p>尾单双</p>
+                    <p>尾大小</p>
                     <span></span>
                     <div style="clear:both;"></div>
                 </dt>
@@ -891,7 +892,7 @@
                 </dl>
                 <dl class="C8_TcDl">
                     <dt>
-                    <p>合大小</p>
+                    <p>合单双</p>
                     <span></span>
                     <div style="clear:both;"></div>
                 </dt>
