--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
@@ -14,7 +14,7 @@
 <body>
     
     <header class="hjc_header">
-        <a href="/Plan/Post/@lType" class="hjc_back"></a>
+        <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">@ViewBag.title2</a>
     </header>
     
