调整近期竞猜样式

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
@@ -73,6 +73,7 @@
             </dl>
         </div>
         <div class="Gues_Thd">
+            <input type="hidden" id="lType" value="@lType">
             <div class="Gues_ThdLeft f-l">
                 <h3>
                     距离下期开奖
@@ -107,7 +108,7 @@
                     <span>未更新</span>
                 }
             </div>
-            <div style="clear:both;"></div>
+            <div style="clear: both;"></div>
         </div>
     </div>
 
