--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -4964,6 +4964,7 @@ a {
         color: #fff;
         padding: 0 8px;
         border-radius: 2px;
+        margin-left: 5px;
     }
 
 .Gues_content {
