充值功能完成

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -32,7 +32,7 @@
                     }
                 </a>
             </div>
-            <a href="javascript:;" class="Per_hdIf1A f-r"><span>充值</span></a>
+            <a href="/Recharge/Index" class="Per_hdIf1A f-r"><span>充值</span></a>
             <div class="Per_hdIf1con">
                 <div class="hdIf1cTop">
                     <h3 class="If1T_name f-l"><a href="javascript:;">@Model.Name</a></h3>
