聊天室对接后台

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/BlackList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/BlackList.cshtml
@@ -50,7 +50,7 @@
 <body>
     <div class="_container clear">
         <header class="header">
-            <a href="/Talking/ManagementList/@ViewBag.RoomId" class="a_back"></a>
+            <a href="/Talking/ManagementList?roomId=@ViewBag.RoomId&roomName=@ViewBag.RoomName" class="a_back"></a>
             <h1>拉黑列表</h1>
         </header>
 
