--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ManagementList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ManagementList.cshtml
@@ -25,13 +25,13 @@
             </header>*@
 
         <header class="header">
-            <a href="/Talking/ChatRoom/@ViewBag.RoomId" class="a_back"></a>
+            <a href="/Talking/ChatRoom?roomId=@ViewBag.RoomId&roomName=@ViewBag.RoomName" class="a_back"></a>
             <div class="h_title">
                 <h1>处理记录</h1>
             </div>
             @if (ViewBag.IsAdmin == true)
             {
-                <a href="/Talking/BlackList/@ViewBag.RoomId" class="a_gl" style="width:auto;margin-right: 10px; right: 0;">拉黑列表</a>
+                <a href="/Talking/BlackList?roomId=@ViewBag.RoomId&roomName=@ViewBag.RoomName" class="a_gl" style="width:auto;margin-right: 10px; right: 0;">拉黑列表</a>
             }
         </header>
         <main class="main" id="main">
